# fc_fast_api

./: docker-compose.yml  pyproject.toml  readme.md
app/: authorization.py  background.py  custom_error.py  database.py  dp_injection.py  main.py  middleware.py  models.py
static/: login.html
