[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["none"]

[tool.poetry.dependencies]
python = "3.9.5"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.36"
fastapi = "^0.78.0"
PyMySQL = "^1.0.2"
cryptograpy = "^0.0.0"

[tool.poetry.dev-dependencies]
httpie = "^3.2.1"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
